Fix: Add default NuGet feed URL, add Serilog logging & integration test
- Adds a default value for QueryFeedUrl in NuGetSettings to fix search failures caused by external config overrides.
- Configures Serilog for file logging (log-*.log).
- Adds an integration test for live NuGet API search.
- Updates .gitignore to ignore log and cache files.
- Removes the temporary Ping tool.

--- a/src/NuGetContextMcpServer.Host/appsettings.json
+++ b/src/NuGetContextMcpServer.Host/appsettings.json
@@ -12,5 +12,31 @@
   "CacheSettings": {
     "DatabasePath": "nuget_cache.db",
     "DefaultExpirationMinutes": 60
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning",
+        "NuGetContextMcpServer": "Debug"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "log-.log",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}",
+          "retainedFileCountLimit": 7,
+          "buffered": false
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext" ]
   }
 }
