--- a/src/NuGetContextMcpServer.Abstractions/NuGetContextMcpServer.Abstractions.csproj
+++ b/src/NuGetContextMcpServer.Abstractions/NuGetContextMcpServer.Abstractions.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="NuGet.Versioning" Version="6.13.2" />
+    <PackageReference Include="NuGet.Protocol" Version="6.13.2" />
   </ItemGroup>
 
 </Project>
