--- a/src/NuGetContextMcpServer.Infrastructure/NuGetContextMcpServer.Infrastructure.csproj
+++ b/src/NuGetContextMcpServer.Infrastructure/NuGetContextMcpServer.Infrastructure.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="NuGet.Credentials" Version="6.13.2" />
     <PackageReference Include="NuGet.Protocol" Version="6.13.2" />
     <PackageReference Include="NuGet.Versioning" Version="6.13.2" /> <!-- Updated version to match Abstractions -->
+    <PackageReference Include="NuGet.Packaging" Version="6.13.2" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.4" /> <!-- Added for IHostedService -->
   </ItemGroup>
 
